# nibbler

./: CMakeLists.txt  Dockerfile  Makefile  README.md  meson.build  nibbler
basic_example/: libplus1.cpp  libplus2.cpp  main.cpp
class_example/: polygon.hpp
examples/basic_example/: Makefile
examples/class_example/: Makefile  main.cpp  triangle.cpp
examples/raylib_example/: Makefile
examples/sdl_example/: Makefile
examples/sfml_example/: Makefile  wrapper.cpp
examples/switch_example/: Makefile  main.cpp  raylib_wrapper.cpp  sdl_wrapper.cpp  sfml_wrapper.cpp
include/: Game.hpp  ILibraries.hpp  Raylib.hpp  SDL.hpp  SFML.hpp  nibbler.hpp
raylib_example/: Makefile  main.cpp  wrapper.cpp
sdl_example/: Makefile  main.cpp  wrapper.cpp
sfml_example/: Makefile  wrapper.cpp
src/: Game.cpp  Raylib.cpp  SDL.cpp  SFML.cpp  main.cpp  meson.build  utils.cpp
